--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
 		<title>Eliton</title>
-		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
+		<link rel=" shortcut icon" type="image/svg" href="assets/icons/logo.svg" />
 		<link rel="stylesheet" href="app.css" />
 		<script src="https://unpkg.com/lucide@latest"></script>
 	</head>
